feat: 删除一些无用代码
