# docs/openapi3.yaml
@@ -332,27 +332,6 @@ components:
                     description: return information description
                     type: string
             type: object
-        types.DeleteUserssByIDsReply:
-            properties:
-                code:
-                    description: return code
-                    type: integer
-                data:
-                    description: return data
-                    type: object
-                msg:
-                    description: return information description
-                    type: string
-            type: object
-        types.DeleteUserssByIDsRequest:
-            properties:
-                ids:
-                    description: id list
-                    items:
-                        type: integer
-                    minItems: 1
-                    type: array
-            type: object
         types.GetAccountsByIDReply:
             properties:
                 code:
@@ -569,49 +548,6 @@ components:
                         tradess:
                             items:
                                 $ref: '#/components/schemas/types.TradesObjDetail'
-                            type: array
-                    type: object
-                msg:
-                    description: return information description
-                    type: string
-            type: object
-        types.ListUserssByIDsReply:
-            properties:
-                code:
-                    description: return code
-                    type: integer
-                data:
-                    description: return data
-                    properties:
-                        userss:
-                            items:
-                                $ref: '#/components/schemas/types.UsersObjDetail'
-                            type: array
-                    type: object
-                msg:
-                    description: return information description
-                    type: string
-            type: object
-        types.ListUserssByIDsRequest:
-            properties:
-                ids:
-                    description: id list
-                    items:
-                        type: integer
-                    minItems: 1
-                    type: array
-            type: object
-        types.ListUserssReply:
-            properties:
-                code:
-                    description: return code
-                    type: integer
-                data:
-                    description: return data
-                    properties:
-                        userss:
-                            items:
-                                $ref: '#/components/schemas/types.UsersObjDetail'
                             type: array
                     type: object
                 msg:
@@ -1796,108 +1732,6 @@ paths:
             security:
                 - BearerAuth: []
             summary: Get a users by custom condition
-            tags:
-                - users
-    /api/v1/users/delete/ids:
-        post:
-            description: Deletes multiple users by a list of id
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/types.DeleteUserssByIDsRequest'
-                description: id array
-                required: true
-                x-originalParamName: data
-            responses:
-                "200":
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/types.DeleteUserssByIDsReply'
-                    description: OK
-            security:
-                - BearerAuth: []
-            summary: Batch delete users by ids
-            tags:
-                - users
-    /api/v1/users/list:
-        get:
-            description: Returns a paginated list of userss starting after a given last id, useful for cursor-based pagination.
-            parameters:
-                - description: last id, default is MaxInt32
-                  in: query
-                  name: lastID
-                  schema:
-                    default: 0
-                    type: integer
-                - description: number per page
-                  in: query
-                  name: limit
-                  schema:
-                    default: 10
-                    type: integer
-                - description: 'sort by column name of table, and the '
-                  in: query
-                  name: sort
-                  schema:
-                    default: -id
-                    type: string
-            responses:
-                "200":
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/types.ListUserssReply'
-                    description: OK
-            security:
-                - BearerAuth: []
-            summary: Get a paginated list of userss by last id
-            tags:
-                - users
-        post:
-            description: Returns a paginated list of users based on query filters, including page number and size.
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/types.Params'
-                description: query parameters
-                required: true
-                x-originalParamName: data
-            responses:
-                "200":
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/types.ListUserssReply'
-                    description: OK
-            security:
-                - BearerAuth: []
-            summary: Get a paginated list of userss by custom conditions
-            tags:
-                - users
-    /api/v1/users/list/ids:
-        post:
-            description: Returns a list of users that match the list of id.
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/types.ListUserssByIDsRequest'
-                description: id array
-                required: true
-                x-originalParamName: data
-            responses:
-                "200":
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/types.ListUserssByIDsReply'
-                    description: OK
-            security:
-                - BearerAuth: []
-            summary: Batch get users by ids
             tags:
                 - users
 servers:
