# internal/handler/users.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"errors"
-	"math"
 
 	"github.com/gin-gonic/gin"
 
@@ -28,12 +27,8 @@ type UsersHandler interface {
 	DeleteByID(c *gin.Context)
 	UpdateByID(c *gin.Context)
 	GetByID(c *gin.Context)
-	List(c *gin.Context)
-
-	DeleteByIDs(c *gin.Context)
 	GetByCondition(c *gin.Context)
-	ListByIDs(c *gin.Context)
-	ListByLastID(c *gin.Context)
+	Login(c *gin.Context)
 }
 
 type usersHandler struct {
@@ -203,75 +198,6 @@ func (h *usersHandler) GetByID(c *gin.Context) {
 	response.Success(c, gin.H{"users": data})
 }
 
-// List get a paginated list of userss by custom conditions
-// @Summary Get a paginated list of userss by custom conditions
-// @Description Returns a paginated list of users based on query filters, including page number and size.
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param data body types.Params true "query parameters"
-// @Success 200 {object} types.ListUserssReply{}
-// @Router /api/v1/users/list [post]
-// @Security BearerAuth
-func (h *usersHandler) List(c *gin.Context) {
-	form := &types.ListUserssRequest{}
-	err := c.ShouldBindJSON(form)
-	if err != nil {
-		logger.Warn("ShouldBindJSON error: ", logger.Err(err), middleware.GCtxRequestIDField(c))
-		response.Error(c, ecode.InvalidParams)
-		return
-	}
-
-	ctx := middleware.WrapCtx(c)
-	userss, total, err := h.iDao.GetByColumns(ctx, &form.Params)
-	if err != nil {
-		logger.Error("GetByColumns error", logger.Err(err), logger.Any("form", form), middleware.GCtxRequestIDField(c))
-		response.Output(c, ecode.InternalServerError.ToHTTPCode())
-		return
-	}
-
-	data, err := convertUserss(userss)
-	if err != nil {
-		response.Error(c, ecode.ErrListUsers)
-		return
-	}
-
-	response.Success(c, gin.H{
-		"userss": data,
-		"total":  total,
-	})
-}
-
-// DeleteByIDs batch delete users by ids
-// @Summary Batch delete users by ids
-// @Description Deletes multiple users by a list of id
-// @Tags users
-// @Param data body types.DeleteUserssByIDsRequest true "id array"
-// @Accept json
-// @Produce json
-// @Success 200 {object} types.DeleteUserssByIDsReply{}
-// @Router /api/v1/users/delete/ids [post]
-// @Security BearerAuth
-func (h *usersHandler) DeleteByIDs(c *gin.Context) {
-	form := &types.DeleteUserssByIDsRequest{}
-	err := c.ShouldBindJSON(form)
-	if err != nil {
-		logger.Warn("ShouldBindJSON error: ", logger.Err(err), middleware.GCtxRequestIDField(c))
-		response.Error(c, ecode.InvalidParams)
-		return
-	}
-
-	ctx := middleware.WrapCtx(c)
-	err = h.iDao.DeleteByIDs(ctx, form.IDs)
-	if err != nil {
-		logger.Error("GetByIDs error", logger.Err(err), logger.Any("form", form), middleware.GCtxRequestIDField(c))
-		response.Output(c, ecode.InternalServerError.ToHTTPCode())
-		return
-	}
-
-	response.Success(c)
-}
-
 // GetByCondition get a users by custom condition
 // @Summary Get a users by custom condition
 // @Description Returns a single users that matches the specified filter conditions.
@@ -321,91 +247,7 @@ func (h *usersHandler) GetByCondition(c *gin.Context) {
 	response.Success(c, gin.H{"users": data})
 }
 
-// ListByIDs batch get users by ids
-// @Summary Batch get users by ids
-// @Description Returns a list of users that match the list of id.
-// @Tags users
-// @Param data body types.ListUserssByIDsRequest true "id array"
-// @Accept json
-// @Produce json
-// @Success 200 {object} types.ListUserssByIDsReply{}
-// @Router /api/v1/users/list/ids [post]
-// @Security BearerAuth
-func (h *usersHandler) ListByIDs(c *gin.Context) {
-	form := &types.ListUserssByIDsRequest{}
-	err := c.ShouldBindJSON(form)
-	if err != nil {
-		logger.Warn("ShouldBindJSON error: ", logger.Err(err), middleware.GCtxRequestIDField(c))
-		response.Error(c, ecode.InvalidParams)
-		return
-	}
-
-	ctx := middleware.WrapCtx(c)
-	usersMap, err := h.iDao.GetByIDs(ctx, form.IDs)
-	if err != nil {
-		logger.Error("GetByIDs error", logger.Err(err), logger.Any("form", form), middleware.GCtxRequestIDField(c))
-		response.Output(c, ecode.InternalServerError.ToHTTPCode())
-		return
-	}
-
-	userss := []*types.UsersObjDetail{}
-	for _, id := range form.IDs {
-		if v, ok := usersMap[id]; ok {
-			record, err := convertUsers(v)
-			if err != nil {
-				response.Error(c, ecode.ErrListUsers)
-				return
-			}
-			userss = append(userss, record)
-		}
-	}
-
-	response.Success(c, gin.H{
-		"userss": userss,
-	})
-}
-
-// ListByLastID get a paginated list of userss by last id
-// @Summary Get a paginated list of userss by last id
-// @Description Returns a paginated list of userss starting after a given last id, useful for cursor-based pagination.
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param lastID query int false "last id, default is MaxInt32" default(0)
-// @Param limit query int false "number per page" default(10)
-// @Param sort query string false "sort by column name of table, and the "-" sign before column name indicates reverse order" default(-id)
-// @Success 200 {object} types.ListUserssReply{}
-// @Router /api/v1/users/list [get]
-// @Security BearerAuth
-func (h *usersHandler) ListByLastID(c *gin.Context) {
-	lastID := utils.StrToUint64(c.Query("lastID"))
-	if lastID == 0 {
-		lastID = math.MaxInt32
-	}
-	limit := utils.StrToInt(c.Query("limit"))
-	if limit == 0 {
-		limit = 10
-	}
-	sort := c.Query("sort")
-
-	ctx := middleware.WrapCtx(c)
-	userss, err := h.iDao.GetByLastID(ctx, lastID, limit, sort)
-	if err != nil {
-		logger.Error("GetByLastID error", logger.Err(err), logger.Uint64("lastID", lastID), logger.Int("limit", limit), middleware.GCtxRequestIDField(c))
-		response.Output(c, ecode.InternalServerError.ToHTTPCode())
-		return
-	}
-
-	data, err := convertUserss(userss)
-	if err != nil {
-		response.Error(c, ecode.ErrListByLastIDUsers)
-		return
-	}
-
-	response.Success(c, gin.H{
-		"userss": data,
-	})
-}
+func (h *usersHandler) Login(c *gin.Context) {}
 
 func getUsersIDFromPath(c *gin.Context) (string, uint64, bool) {
 	idStr := c.Param("id")
