# internal/routers/users.go
@@ -19,19 +19,15 @@ func usersRouter(group *gin.RouterGroup, h handler.UsersHandler) {
 	// JWT authentication reference: https://go-sponge.com/component/transport/gin.html#jwt-authorization-middleware
 
 	// All the following routes use jwt authentication, you also can use middleware.Auth(middleware.WithExtraVerify(fn))
-	g.Use(middleware.Auth())
+	//g.Use(middleware.Auth())
 
 	// If jwt authentication is not required for all routes, authentication middleware can be added
 	// separately for only certain routes. In this case, g.Use(middleware.Auth()) above should not be used.
+	g.POST("/login", h.Login)
+	g.POST("/", h.Create, middleware.Auth())          // [post] /api/v1/users
+	g.DELETE("/:id", h.DeleteByID, middleware.Auth()) // [delete] /api/v1/users/:id
+	g.PUT("/:id", h.UpdateByID, middleware.Auth())    // [put] /api/v1/users/:id
+	g.GET("/:id", h.GetByID, middleware.Auth())       // [get] /api/v1/users/:id
 
-	g.POST("/", h.Create)          // [post] /api/v1/users
-	g.DELETE("/:id", h.DeleteByID) // [delete] /api/v1/users/:id
-	g.PUT("/:id", h.UpdateByID)    // [put] /api/v1/users/:id
-	g.GET("/:id", h.GetByID)       // [get] /api/v1/users/:id
-	g.POST("/list", h.List)        // [post] /api/v1/users/list
-
-	g.POST("/delete/ids", h.DeleteByIDs)   // [post] /api/v1/users/delete/ids
-	g.POST("/condition", h.GetByCondition) // [post] /api/v1/users/condition
-	g.POST("/list/ids", h.ListByIDs)       // [post] /api/v1/users/list/ids
-	g.GET("/list", h.ListByLastID)         // [get] /api/v1/users/list
+	g.POST("/condition", h.GetByCondition, middleware.Auth()) // [post] /api/v1/users/condition
 }
